<resources>
    <string name="app_name">Car Rent App</string>
    <string name="splash_logo">splash_logo</string>
    <string name="sign_in_to_continue">Sign In to Continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="go">GO</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="age">Age</string>
    <string name="postal_code">Postal Code</string>
    <string name="already_have_an_account_sign_in">Already have an account?Sign In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="carRentalAppName">Car Rental</string>
    <string name="browseOnlyLabel">I just want to browse the vehicles</string>
    <string name="createAccountLabel">I want to create an account</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="passwordLabel">Password</string>
    <string name="loginLabel">Login</string>
    <string name="emailLabel">Email address</string>
    <string name="title_activity_choose_branch">ChooseBranchActivity</string>
    <string name="choose_your_branch_label">Choose your branch</string>
    <string name="search_branch_field_label">Search for a branch...</string>
    <string name="title_activity_create_account_step2">CreateAccountStep2Activity</string>
    <string name="next_step">Next step</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="phone_number">Phone number</string>
    <string name="account_details_step_1_2">Account details (Step 1/2)</string>
    <string name="create_account">Create account</string>
    <string name="postal_details_step_2_2">Postal details (Step 2/2)</string>
    <string name="country">Country</string>
    <string name="title_activity_search_vehicle">SearchVehicleActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="pick_up_date">Pick-up date</string>
    <string name="return_date">Return date</string>
    <string name="search_vehicles">Search vehicles</string>
    <string name="payment_details">Payment details</string>
    <string name="credit_card_cvc_code">Credit card CVC code</string>
    <string name="credit_card_expiration_year_yy">Credit card expiration year (YY)</string>
    <string name="credit_card_expiration_month_mm">Credit card expiration month (MM)</string>
    <string name="credit_card_number">Credit card number</string>
    <string name="dash_separator"> - </string>
    <string name="title_activity_edit_vehicle">EditVehicleActivity</string>
    <string name="change_connection_parameters">Change connection parameters</string>
    <string name="seats_number_formatted">%1$d seats</string>
    <string name="doors_number_formatted">%1$d doors</string>
    <string name="automatic_transmission">Automatic transmission</string>
    <string name="manual_transmission">Manual transmission</string>
    <string name="pounds_per_day">£%1$s per day</string>
    <string name="pounds_price">£%1$s</string>
    <string name="user_formatted">User: %1$s</string>
    <string name="to_destination_formatted">To: %1$s</string>
    <string name="from_destination_formatted">From: %1$s</string>
    <string name="date_formatted">Date: %1$s</string>
    <string name="branch_bookings_title">Bookings in %1$s</string>
    <string name="user_bookings_title">Your bookings in %1$s</string>
    <string name="staff_user_label">%1$s (Staff)</string>
    <string name="ends_with_a_dot">%1$s.</string>
    <string name="change_branch_menu_item">Change branch (%1$s)</string>
    <string name="create_booking_title">Create a booking in %1$s</string>
    <string name="book_vehicle_title">Book a vehicle in %1$s</string>
    <string name="outgoing_vehicles_moves_title">Outgoing vehicle moves for %1$s</string>
    <string name="incoming_vehicles_moves_title">Incoming vehicle moves for %1$s</string>
    <string name="status_accepted">Status: Accepted</string>
    <string name="status_not_accepted">Status: Not accepted</string>
    <string name="invalidate_booking_label">Invalidate booking</string>
    <string name="validate_booking">Validate booking</string>
    <string name="loading_text">Loading…</string>
    <string name="successfully_updated_booking">Successfully updated booking !</string>
    <string name="invalid_branch">Invalid branch.</string>
    <string name="invalid_credit_card_number">Invalid credit card number.</string>
    <string name="invalid_credit_card_exp_month">Invalid credit card expiration month.</string>
    <string name="invalid_credit_card_exp_year">Invalid credit card expiration year.</string>
    <string name="invalid_credit_card_cvc_code">Invalid credit card CVC code.</string>
    <string name="booking_successfully_created">Booking successfully created !.</string>
    <string name="update_vehicle_title">Update a vehicle</string>
    <string name="vehicle_update_sucess">Vehicle successfully updated !</string>
    <string name="vehicle_update_failed">Vehicle update failed !</string>
    <string name="booking_search_results_title_formatted">Available results in %1$s</string>
    <string name="login_register_required_book_vehicle">You need to login or create an account in order to book a vehicle !</string>
    <string name="no_vehicle_found_criteria">Not any vehicle found matching your criteria</string>
    <string name="invalid_port_ip">Invalid port or IP address</string>
    <string name="system_found_at_ip_but_unavailable">The car rental system attached to this IP address and port responded but is currently unavailable.</string>
    <string name="no_system_found_at_ip">No car rental system found at this IP address and port.</string>
    <string name="system_found_and_working_at_ip">Successfully changed the connection parameters !</string>
    <string name="cant_find_position">Can\'t find your position !</string>
    <string name="nearest_branch_label">This branch seems to be the nearest to your position</string>
    <string name="invalid_fullname">Invalid fullname.</string>
    <string name="create_user_account_title">Create new user account</string>
    <string name="invalid_email_address">Invalid email address.</string>
    <string name="invalid_phone_number">Invalid phone number.</string>
    <string name="invalid_password">Invalid password.</string>
    <string name="passwords_doesnt_match">Both passwords doesn\'t match.</string>
    <string name="invalid_street">Invalid street.</string>
    <string name="invalid_city">Invalid city.</string>
    <string name="invalid_postal_code">Invalid postal code.</string>
    <string name="invalid_country">Invalid country.</string>
    <string name="user_successfully_created">User successfully created !</string>
    <string name="user_creation_failed">User creation failed !</string>
    <string name="user_successfully_registered">Successfully registered !.</string>
    <string name="invalid_credentials_error">Invalid credentials.</string>
    <string name="successfully_logged_in">Successfully logged in !</string>
    <string name="search_vehicle_title">Search a vehicle</string>
    <string name="invalid_pickup_date">Invalid pickup date.</string>
    <string name="invalid_return_date">Invalid return date.</string>
    <string name="invalid_vehicle_type">Invalid vehicle type.</string>
    <string name="no_booking_for_branch_at_the_moment">There is no booking for this branch at the moment.</string>
    <string name="choose_user_title">Select an user for the booking</string>
    <string name="no_user_found_for_criteria">Not any user found for this criteria</string>
    <string name="invalid_vehicle_name">Invalid vehicle name.</string>
    <string name="invalid_vehicle_reg_number">Invalid vehicle registration number.</string>
    <string name="invalid_doors_number">Invalid number of doors.</string>
    <string name="invalid_seats_number">Invalid number of seats.</string>
    <string name="invalid_price_per_day">Invalid price per day.</string>
    <string name="vehicle_successfully_created">Vehicle successfully created !</string>
    <string name="vehicle_creation_failed">Vehicle creation failed !</string>
    <string name="create_vehicle_title">Create new vehicle</string>
    <string name="invalid_search_criteria">Invalid search criteria.</string>
    <string name="no_vehicle_found_for_registration_number">Not any vehicle found for this registration number.</string>
    <string name="no_vehicle_found_for_criteria">Your search criteria returned no results.</string>
    <string name="switch_to_incoming_vehicles_button">Switch to incoming vehicles</string>
    <string name="switch_to_outgoing_vehicles_button">Switch to outgoing vehicles</string>
    <string name="no_outgoing_vehicles">There is no outgoing vehicles for this branch at the moment.</string>
    <string name="no_incoming_vehicles">There is no incoming vehicles for this branch at the moment.</string>
    <string name="system_administration_title">System status control</string>
    <string name="system_is_offline">The system is offline.</string>
    <string name="system_is_online">The system is online.</string>
    <string name="vehicle_search_results_title">Vehicle search results</string>
    <string name="no_booking_at_branch">You don\'t have any booking at this branch at the moment.</string>
    <string name="server_control_menu_item">Server control</string>
    <string name="view_branch_moves_menu_item">View branch vehicle moves</string>
    <string name="view_branch_bookings_menu_item">View branch bookings</string>
    <string name="add_vehicle_menu_item">Add vehicle to the branch</string>
    <string name="make_client_booking_menu_item">Make a client booking</string>
    <string name="search_vehcile_menu_item">Search a vehicle</string>
    <string name="user_bookings_menu_item">My bookings</string>
    <string name="search_available_vehicles_menu_item">Search for a vehicle</string>
    <string name="logout_menu_item">Logout</string>
    <string name="change_server_settings_menu_item">Change server settings</string>
    <string name="login_register_menu_item">Login/Register</string>
    <string name="no_branch_selected">No branch selected</string>
    <string name="error_server_not_reachable">Can\'t contact the server at the moment.</string>
    <string name="error_server_not_available">The system is unavailable at the moment, please try again later.</string>
    <string name="SelectImage">Select Images</string>
    <string name="PICKtoDROPOFF">PICK to DROPOFF</string>
    <string name="PickUpDate">PickUpDate</string>
    <string name="PickUpTime">PickUpTime</string>
    <string name="DropOffDate">DropOffDate</string>
    <string name="dropoffTime">DropoffTime</string>
    <string name="Proceed">Proceed</string>
    <string name="LicenceVerification">LicenceVerification</string>
    <string name="DriverName">DriverName</string>
    <string name="LicenceNo">LicenceNo</string>
    <string name="save_and_checkout">Save and Checkout</string>
    <string name="sign_in_to_continue_as_an_admin">Sign in to continue as an Admin</string>
</resources>