<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".DateTime_Selection">


    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="12dp"
        android:text="@string/PICKtoDROPOFF"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FromDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/PickUpDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/FromDate__1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:inputType="text|textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FromTime"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/PickUpTime">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/FromTime__1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:inputType="text|textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/Airbags_svg"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_gravity="center"

        android:src="@drawable/ic_down_arrow__1_" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ToDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/DropOffDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ToDate__1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:inputType="text|textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ToTime"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dropoffTime">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ToTime__1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:inputType="text|textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="16dp"
        android:text="@string/Proceed" />

</LinearLayout>