<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverLicence_User">

    <LinearLayout
        android:id="@+id/licencelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/slogan_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="12dp"
            android:text="@string/LicenceVerification"
            android:textColor="@color/black"
            android:textSize="18sp" /><!--DRIVER DETAILS VERIFICATION-->


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/DriverName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/DriverName"><!--Driver Name-->

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LicenceNo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LicenceNo"><!--Licence No -->

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="none" />


            <Button
                android:id="@+id/SelectImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/SelectImage" />


            <Button
                android:id="@+id/Submit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_and_checkout" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
