<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/progress"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="20dp"
    android:visibility="visible"
    tools:context=".SignIn">

    <ImageView
        android:id="@+id/logo_Image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/splash_logo"
        android:src="@drawable/car" />

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:layout_height="wrap_content">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:hint="@string/password"
            app:passwordToggleEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/forget"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forget"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@color/teal_200"
            android:text="@string/go"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/new_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:text="@string/new_user_sign_up"
            android:textColor="@color/black"
            android:textStyle="normal" />

        <!--        <RelativeLayout-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:padding="20dp"-->
        <!--            android:layout_centerInParent="true"-->
        <!--            android:background="@drawable/whitecircle"-->
        <!--            android:elevation="8dp">-->

        <!--            <ProgressBar-->
        <!--                android:id="@+id/progress_bar"-->
        <!--                android:layout_width="30dp"-->
        <!--                android:layout_height="30dp"-->
        <!--                android:layout_centerInParent="true"/>-->
        <!--        </RelativeLayout>-->
    </RelativeLayout>

    <Button
        android:id="@+id/new_user1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="#00000000"
        android:text="new admin? Sign up"
        android:textColor="@color/black"
        android:textStyle="normal" />
</LinearLayout>




